[tool.poetry]
name = "kunai"
version = "1.22.4"
description = "My package about Python"
authors = ["Junya Morioka <mjun@mjunya.com>"]
license = "MIT"
repository = "https://github.com/mjun0812/kunai"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
opencv-python = "^4.7.0.68"
matplotlib = "^3.6.3"
tabulate = "^0.9.0"
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
torch = "^1.13.1"
torchinfo = "^1.7.2"
black = "^23.1.0"
hydra-core = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
