[tool.poetry]
name = "kunai"
version = "1.24.0"
description = "My package about Python"
authors = ["Junya Morioka <mjun@mjunya.com>"]
license = "MIT"
repository = "https://github.com/mjun0812/kunai"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.28.2"
opencv-python = ">=4.7.0.68"
matplotlib = ">=3.6.3"
tabulate = ">=0.9.0"
omegaconf = ">=2.3.0"
numpy = ">=1.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.poetry.group.doc.dependencies]
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
