[metadata]
name = kunai
version = attr: kunai.__version__
description = My package about Pyton
long_description = file: README.md 
long_description_content_type = text/markdown
author = Junya Morioka
author_email = mjun@mjunya.com
license = LICENSE

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
    requests
    numpy
    matplotlib
    opencv-python
